--- a/styles/main.css
+++ b/styles/main.css
@@ -5,8 +5,8 @@ main {
 }
 
 div.box {
-    width: 120px;
-    height: 120px;
+    width: 300px;
+    height: 250px;
     background-color: var(--color-yellow-light);
     border: 1px solid rgba(100, 100, 100);
     box-shadow: 2px 2px 2px rgba(0, 0, 0, .2);
